2008-05-02  Juanma Barranquero  <lekktu@gmail.com>

	* org.texi (Moving subtrees): Fix typo.

2008-04-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Explain, how to disable
	Tramp via `tramp-mode'.

2008-04-27  Carsten Dominik  <dominik@sam.science.uva.nl>

	* org.texi: Massive changes, in many parts of the file.

2008-04-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Oort Gnus): Add message-fill-column.

2008-04-12  Adrian Aichner  <adrian@xemacs.org>

	* gnus.texi (Mail Source Specifiers): Typo fix.

2008-04-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Diary Headers Generation): Update key binding for
	`gnus-diary-check-message'.

2008-04-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Emacsen): Addition.

2008-04-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Emacsen): Give recommendations for Emacs 22 and Emacs 23.

2008-04-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Oort Gnus): Mention customizing of tool bars.

2008-04-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-news.texi: Update tool bar item.

2008-04-09  Sven Joachim  <svenjoac@gmx.de>

	* gnus-news.texi: Fix typos.

2008-04-11  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.texi (Vector and Matrix Arithmetic, Calc Summary):
	Add mention of `kron'.

2008-04-01  Daiki Ueno  <ueno@unixuser.org>

	* epa.texi (Encrypting/decrypting *.gpg files): Document
	epa-file-name-regexp.

2008-03-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Example Methods): Fix description about ssh-agent.
	(Indirect Functions): Fix the default value of nntp-telnet-command;
	remove link to connect.html.

2008-03-30  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Synchronous Methods): New parameter TIMEOUT for
	dbus-call-method.
	(Receiving Method Calls): The timeout can be set by the calling client.

	* trampver.texi: Update release number.

2008-03-29  Reiner Steib  <Reiner.Steib@gmx.de>
